--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -62,13 +62,31 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jAw-j8-8aJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="jAw-j8-8aJ" customClass="PhotoCollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="N04-AT-oY2">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="N04-AT-oY2" customClass="PhotoCollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7pN-Ug-O0w">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="EAj-rM-5nY"/>
+                                                        <constraint firstAttribute="height" constant="100" id="KnF-eC-q5A"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7pN-Ug-O0w" firstAttribute="top" secondItem="N04-AT-oY2" secondAttribute="top" id="1sq-Rh-XgO"/>
+                                                <constraint firstItem="7pN-Ug-O0w" firstAttribute="leading" secondItem="N04-AT-oY2" secondAttribute="leading" id="H9r-lA-BME"/>
+                                                <constraint firstAttribute="bottom" secondItem="7pN-Ug-O0w" secondAttribute="bottom" id="cx6-mW-bw0"/>
+                                                <constraint firstAttribute="trailing" secondItem="7pN-Ug-O0w" secondAttribute="trailing" id="iCo-CS-xFk"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageView" destination="7pN-Ug-O0w" id="aGS-QF-HFf"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
